Pruebas unitarias finales, documentación y últimos ajustes